--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" type="image/gif/png" href="img/logo.png">
 	<title>Quote Generator</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/gif/png" href="img/logo.png">
+	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 </head>
 <body>
 <header>
@@ -14,10 +15,27 @@
 </header>
 <main>
 	<!-- main body starts here-->
+	<img id="showImage" style="height: 500px; width: 500px;"> </img>
+	<p></p>
+	<button type="button" onclick="newQuote()">New Quote</button>
+	<p></p>
 	<!-- main body ends here--> 
 </main>
 <footer>
 	<!-- footer starts here -->
+	<p>Mishal Shah</p>
+	<p style="font-size: 90%">National Institute of Technology, Karnataka</p>
+	<p>
+		<a href="mailto:shahmishal1998@gmail.com">
+			<i class="fa fa-envelope fa-fw"></i>
+		</a>
+		<a href="https://github.com/mishal23" target="_blank">
+			<i class="fa fa-github fa-fw"></i>
+		</a>
+		<a href="https://www.linkedin.com/in/mishal-shah-62b025128/" target="_blank">
+			<i class="fa fa-linkedin"></i>
+		</a>
+	</p>
 	<!-- footer ends here-->
 </footer>
 <script type="text/javascript" href="user.js"></script>
