Website works fine, need to add Shareit button now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quote Generator</title>
+	<title>Quotes | Stay Motivated</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/gif/png" href="img/logo.png">
 	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -9,13 +9,13 @@
 <body>
 <header>
 	<!-- Header starts here -->
-	<h1>Quote Generator</h1>
+	<h1>Motivational Quotes</h1>
 	<p>Quotes are the repetition of someone's thoughts,ideas. Quotes are necessary to keep us motivated in our daily life, for us to gear up for our goals, be more determined.</p>
 	<!-- Header ends here -->
 </header>
 <main>
 	<!-- main body starts here-->
-	<img id="showImage" style="height: 500px; width: 500px;"> </img>
+	<img id="showImage" style="width: 350px; height: 350px;"> </img>
 	<p></p>
 	<button type="button" onclick="newQuote()">New Quote</button>
 	<p></p>
@@ -38,6 +38,6 @@
 	</p>
 	<!-- footer ends here-->
 </footer>
-<script type="text/javascript" href="user.js"></script>
+<script type="text/javascript" src="user.js"></script>
 </body>
 </html>
