--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 	<!-- Header starts here -->
-	<h1>Motivational Quotes</h1>
+	<h1>Quotes</h1>
 	<p>Quotes are the repetition of someone's thoughts,ideas. Quotes are necessary to keep us motivated in our daily life, for us to gear up for our goals, be more determined.</p>
 	<!-- Header ends here -->
 </header>
