Image loads on page load

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="image/gif/png" href="img/logo.png">
 	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header>
@@ -39,5 +40,8 @@
 	<!-- footer ends here-->
 </footer>
 <script type="text/javascript" src="user.js"></script>
+<script>
+newQuote();
+</script>
 </body>
 </html>
