Image loads on page load

--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
 	<!-- footer ends here-->
 </footer>
 <script type="text/javascript" src="user.js"></script>
+<script>
+	newQuote();
+</script>
 </body>
 </html>
